--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrimeProperties - Temukan Rumah Impian Anda</title>
+    <title>Baraka Uba Talun - Temukan Rumah Impian Anda</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Reset dan variabel */
@@ -525,7 +525,7 @@
             <nav class="navbar">
                 <div class="logo">
                     <i class="fas fa-home"></i>
-                    PrimeProperties
+                    Baraka Uba Talun
                 </div>
                 <div class="nav-links">
                     <a href="#" class="active">Beranda</a>
@@ -546,7 +546,7 @@
     <section class="hero">
         <div class="container">
             <h1>Temukan Rumah Impian Anda</h1>
-            <p>PrimeProperties adalah destinasi utama Anda untuk menemukan properti sempurna yang sesuai dengan kebutuhan Anda. Dengan ribuan listing properti di seluruh Indonesia.</p>
+            <p>Baraka Uba adalah destinasi utama Anda untuk menemukan properti sempurna yang sesuai dengan kebutuhan Anda. Dengan ribuan listing properti di seluruh Indonesia.</p>
         </div>
     </section>
 
